@@ -40,7 +40,7 @@ edit_time_days=days
 edit_time_before_label=
 edit_time_after_label=ago
 settings_instructions=Settings
-settings_disabled=Settings (Requires "Mod Settings Changed" permissions)
+settings_disabled=Settings (Requires Admin permissions)
 pin_instructions=Keep open
 settings_title=Milestones settings
 settings_import_title=Import settings
@@ -72,7 +72,7 @@ message_milestone_reached_item_more=[img=milestones_main_icon_white] [font=defau
 message_milestone_reached_kill_first=[img=milestones_main_icon_white] [font=default-large-bold]Killed the first [color=green][img=__1__]__2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
 message_milestone_reached_kill_more=[img=milestones_main_icon_white] [font=default-large-bold]Killed [color=green]__1__ [img=__2__]__3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
 message_milestone_reached_technology=[img=milestones_main_icon_white] [font=default-large-bold]Researched [color=green][img=__1__]__2____3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
-message_settings_permission_denied=[color=red]Cannot change Milestones settings. You need "Mod Settings Changed" permissions.[/color]
+message_settings_permission_denied=[color=red]Cannot change Milestones settings. You need Admin permissions.[/color]
 message_invalid_import_json=[color=red]Invalid import string. This string is not a valid JSON string or encoded string.[/color]
 message_invalid_import_type=[color=red]Invalid import string. Invalid type: [/color]
 message_invalid_import_quantity=[color=red]Invalid import string. Invalid quantity: [/color]
