@@ -264,8 +264,8 @@ function cancel_settings_page(player_index)
 end
 
 function confirm_settings_page(player_index)
-    local permission_group = game.players[player_index].permission_group
-    if permission_group == nil or not permission_group.allows_action(defines.input_action.mod_settings_changed) then
+    local player = game.players[player_index]
+    if not player.admin then
         game.players[player_index].print{"milestones.message_settings_permission_denied"}
         return
     end
